# SchemaPlugin

./: README.md  __init__.py  admin.py  brouillon.txt  configuration.py  dump.rdb  forms.py  models.py  pyproject.toml  settings.py  setup.py  urls.py  views.py
bd_schema_plugin.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
migrations/: 0001_initial.py  0002_auto_20240125_0253.py  0003_alter_node_labels.py  0004_alter_node_labels.py  0005_alter_node_labels.py  0006_alter_node_property.py  0007_remove_node_name.py  0008_rename_property_node_properties.py  0009_rename_type_node_types.py  0010_auto_20240127_0100.py  0011_alter_relationship_properties.py  0012_alter_relationship_relation_type.py
templates/_partials/: base.html  messages.html
templates/bd_schema_plugin/: create_node.html  create_relation.html  edit_node.html  edit_relation.html  node.html  node_details.html  relation.html  relation_details.html
tests/: test_models.py  test_views.py
