[tool.poetry]
name = "bd_schema_plugin"
version = "0.1.0"
description = "an exemple of bd schema plugin"
authors = ["onana donald"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"